# personal-intelligence-engine

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  README.pt-BR.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  data_model.md  git_publication_checklist.md  phase_2c_issues.md  privacy.md  roadmap.md  troubleshooting.md
examples/: sample_entries.json
migrations/: 001_initial_schema.sql
personal_intelligence_engine/: __init__.py
personal_intelligence_engine/app/: __init__.py  config.py  main.py
personal_intelligence_engine/app/adapters/: __init__.py  fake_extractor.py  local_llm_extractor.py  markdown_writer.py
personal_intelligence_engine/app/cli/: commands.py
personal_intelligence_engine/app/domain/: schemas.py  types.py
personal_intelligence_engine/app/evaluation/: __init__.py  report.py  runner.py  scoring.py
personal_intelligence_engine/app/prompts/: extraction_prompt.md
personal_intelligence_engine/app/repositories/: audit_repository.py  database.py  (+2 more)
tests/: conftest.py  test_audit_log.py  test_cli.py  test_daily_report.py  test_database_schema.py  test_extraction_quality_cli.py  test_extraction_quality_fixtures.py  test_extraction_quality_report.py  test_extraction_quality_runner.py  test_extraction_quality_scoring.py  test_extraction_service.py  test_extractor_selection.py  test_fake_extractor.py  test_ingestion.py  test_local_llm_extractor.py  test_markdown_generation.py  test_prompt_contract.py  test_schema.py
tests/fixtures/: extraction_quality_cases.json  prompt_regression_cases.json
(+6 files in other folders)
